# local-data-stack

./: .gitignore  README.md  cookiecutter.json  pixi.toml  pyproject.toml
.github/workflows/: validate-template.yaml
doc/: README.md
scripts/: handle-dev-secrets.sh
{{ cookiecutter.project_slug }}/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  dagster_docker.yaml  docker-compose.yml  pixi.toml  public-age-keys.txt  pyproject.toml  taplo.toml  workspace.yaml  workspace_docker.yaml
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: user-story.md
{{ cookiecutter.project_slug }}/prototyping/proxy/: .env
{{ cookiecutter.project_slug }}/prototyping/proxy/services/proxy/rules/: middlewares.yml
{{ cookiecutter.project_slug }}/scripts/: secops_config.sh
{{ cookiecutter.project_slug }}/src/code_location_foo/: pyproject.toml  setup.cfg
{{ cookiecutter.project_slug }}/src/code_location_foo/quickstart_etl/: __init__.py  definitions.py
{{ cookiecutter.project_slug }}/src/code_location_foo/quickstart_etl/defs/hn/: component.py  hackernews.py
{{ cookiecutter.project_slug }}/src/code_location_foo/quickstart_etl_tests/: test_defs.py
{{ cookiecutter.project_slug }}/src/code_location_{{ cookiecutter.project_slug }}/: pyproject.toml
{{ cookiecutter.project_slug }}/src/code_location_{{ cookiecutter.project_slug }}/code_location_{{ cookiecutter.project_slug }}/: __init__.py  definitions.py
{{ cookiecutter.project_slug }}/src/code_location_{{ cookiecutter.project_slug }}/code_location_{{ cookiecutter.project_slug }}/assets/: dbt_assets.py
{{ cookiecutter.project_slug }}/src/code_location_{{ cookiecutter.project_slug }}/code_location_{{ cookiecutter.project_slug }}/assets/logistics/: logistics_example.py
{{ cookiecutter.project_slug }}/src/code_location_{{ cookiecutter.project_slug }}/code_location_{{ cookiecutter.project_slug }}/defs/dbt/: component.py  dbt_assets.py
{{ cookiecutter.project_slug }}/src/code_location_{{ cookiecutter.project_slug }}/code_location_{{ cookiecutter.project_slug }}/defs/dbt/resources/: __init__.py
{{ cookiecutter.project_slug }}/src/code_location_{{ cookiecutter.project_slug }}/code_location_{{ cookiecutter.project_slug }}/defs/logistics/: logistics_example.py
{{ cookiecutter.project_slug }}/src/code_location_{{ cookiecutter.project_slug }}/code_location_{{ cookiecutter.project_slug }}_dbt/: dbt_project.yml  profiles.yml
{{ cookiecutter.project_slug }}/src/code_location_{{ cookiecutter.project_slug }}/code_location_{{ cookiecutter.project_slug }}_dbt/macros/: create_latest_version_view.sql
{{ cookiecutter.project_slug }}/src/code_location_{{ cookiecutter.project_slug }}/code_location_{{ cookiecutter.project_slug }}_dbt/models/example/: __example_docs.md  my_second_dbt_model.sql  schema.yml
{{ cookiecutter.project_slug }}/src/code_location_{{ cookiecutter.project_slug }}/code_location_{{ cookiecutter.project_slug }}_tests/: test_defs_load.py
{{ cookiecutter.project_slug }}/src/shared_library/: pyproject.toml
{{ cookiecutter.project_slug }}/src/shared_library/shared_library/orchestration/: dbt_translator.py
