[project]
name = "lmds-template"
version = "1.0.0"
description = "Local data stack template"
authors = [{ name = "Georg Heiler", email = "georg.kf.heiler@gmail.com" }]
requires-python = "== 3.12"

[tool.pixi.project]
platforms = ["linux-64", "osx-arm64", "win-64", "linux-aarch64"]
channels = ["conda-forge"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.environments]
ci = { features = ["ci-basics"], solve-group = "ci" }
template = { features = ["template"], solve-group = "template" }

[tool.pixi.feature.ci-basics.dependencies]
yamllint = ">=1.35.1,<2"
taplo = ">=0.9.3,<0.10"

[tool.pixi.feature.template.dependencies]
cruft = "~=2.16.0"
cookiecutter = "~=2.6.0"

[tool.pixi.feature.template.pypi-dependencies]
jinja2-ospath = ">=0.3.0,<0.4.0"

[tool.pixi.tasks.fmt]
cmd = "pixi run -e ci yamllint -c yamllintconfig.yaml . && taplo fmt"
description = "Format yaml & toml files"
env = { RUST_LOG = "warn" }

[tool.pixi.tasks.tpl-init-cruft]
cmd = "pixi run -e template cruft create https://github.com/l-mds/local-data-stack.git"
description = "Initialize template with cruft"

[tool.pixi.tasks.render-dev]
cmd = "pixi run --frozen -e template cruft create . --no-input --overwrite-if-exists --output-dir rendered-template && ./scripts/handle-dev-secrets.sh"
description = "locally render a development instance of the template"

[tool.pixi.tasks.render-dev-no-secrets]
cmd = "pixi run --frozen -e template cruft create . --no-input --overwrite-if-exists --output-dir rendered-template"
description = "locally render a development instance of the template; no secrets needed (for CI)"
