[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "quickstart_etl.definitions"
code_location_name = "quickstart_etl"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "quickstart_etl"
registry_modules = ["quickstart_etl.components.*"]