[tool.dagster]
module_name = "code_location_{{ cookiecutter.project_slug }}"

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code_location_{{ cookiecutter.project_slug }}"
version = "1.0.0"
description = "A sample code location with some python and dbt assets"
authors = [{ name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}" }]
license = { text = "UNLICENSED" }
dependencies = ["dagster>=1.11.11,<1.12"]

[project.optional-dependencies]
dev = ["dagster-webserver>=1.11.11,<1.12", "pytest"]

[project.urls]
repository = "https://github.com/{{ cookiecutter.organization }}/{{ cookiecutter.project_slug }}"

[tool.setuptools.packages.find]
exclude = ["code_location_{{ cookiecutter.project_slug }}_tests"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "code_location_{{ cookiecutter.project_slug }}"
registry_modules = ["code_location_{{ cookiecutter.project_slug }}.components.*"]